--- a/BSHomeWork2/all.css
+++ b/BSHomeWork2/all.css
@@ -6,7 +6,6 @@
 body {
   width: 100%;
   background-image: url("assets/asset 15.jpeg");
-  min-height: 600px;
   background-size: cover;
   /* 背景圖片不重複 */
   background-repeat: no-repeat;
@@ -494,4 +493,72 @@ body {
 .img-wall img {
   width: 25%;
   height: 100%;
+}
+
+.footer {
+  width: 100%;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.footer img {
+  display: block;
+  width: 100%;
+}
+
+.footer .footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.footer .footer-content .footer-logo {
+  display: flex;
+  align-items: center;
+}
+
+.footer .footer-content .footer-logo .title {
+  margin: 20px;
+  font-size: 60px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer .footer-content .footer-icon .fab {
+  font-size: 50px;
+  margin: 10px 10px;
+}
+
+.footer .footer-content .footer-icon .fa-twitter-square {
+  color: #55ccff;
+}
+
+.footer .footer-content .footer-icon .fa-facebook-square {
+  color: #4488ff;
+}
+
+.footer .footer-content .footer-icon .fa-pinterest-square {
+  color: #ff2222;
+}
+
+.footer .footer-content .footer-icon .fa-linkedin {
+  color: #11aaee;
+}
+
+.footer .footer-content .footer-txt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+}
+
+.footer .footer-content .footer-txt .tel .fas,
+.footer .footer-content .footer-txt .address .fas {
+  margin: 10px 0;
+  color: orange;
 }
