--- a/BSHomeWork2/all.css
+++ b/BSHomeWork2/all.css
@@ -98,9 +98,9 @@ body {
   height: 120px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   vertical-align: middle;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   background-color: white;
   padding: 10px 10%;
   box-sizing: border-box;
@@ -124,8 +124,9 @@ body {
 }
 
 .banner nav {
-  display: flex;
   width: 100%;
+  display: flex;
+  margin: 0 50px;
 }
 
 .banner nav a {
@@ -163,12 +164,13 @@ body {
   z-index: 0;
   width: 100%;
   /* height: 100%; */
-  height: 700px;
+  /* height: 700px; */
 }
 
 .donate img {
+  display: block;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .donate .donate-content {
@@ -231,6 +233,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 550px;
+
   vertical-align: middle;
 }
 
