--- a/BSHomeWork2/all.css
+++ b/BSHomeWork2/all.css
@@ -93,7 +93,7 @@ body {
   margin: 0 10px;
 }
 
-.banner {
+.navi {
   width: 100%;
   height: 120px;
   display: flex;
@@ -110,12 +110,12 @@ body {
   z-index: 100;
 }
 
-.banner .logo {
+.navi .logo {
   display: flex;
   align-items: center;
 }
 
-.banner .logo .title {
+.navi .logo .title {
   margin: 20px;
   font-size: 60px;
   font-weight: bold;
@@ -123,13 +123,13 @@ body {
   color: #555;
 }
 
-.banner nav {
+.navi nav {
   width: 100%;
   display: flex;
   margin: 0 50px;
 }
 
-.banner nav a {
+.navi nav a {
   margin: 0 20px;
   text-decoration: none;
   font-size: 25px;
@@ -137,12 +137,12 @@ body {
   transition: 0.4s;
 }
 
-.banner nav a:hover {
+.navi nav a:hover {
   border-bottom: 3px solid orange;
   cursor: pointer;
 }
 
-.banner .btn-donate button {
+.navi .btn-donate button {
   font-size: 12px;
   font-weight: bold;
   border: 1px solid orange;
@@ -153,7 +153,7 @@ body {
   transition: all 0.5s;
 }
 
-.banner .btn-donate button:hover {
+.navi .btn-donate button:hover {
   background-color: #7777ff;
   color: white;
   cursor: pointer;
