--- a/BSHomeWork2/all.css
+++ b/BSHomeWork2/all.css
@@ -63,7 +63,7 @@ body {
 .back-to-top .container a {
   display: block;
   text-align: center;
-  width: 600x;
+  width: 60px;
   height: 60px;
   color: #fff;
   font-size: 40px;
