--- a/BSHomeWork2/all.css
+++ b/BSHomeWork2/all.css
@@ -305,28 +305,21 @@ body {
   justify-content: center;
 }
 
-.help .help-content .help-img .img1,
-.help .help-content .help-img .img2,
-.help .help-content .help-img .img3 {
+.help .help-content .help-img .item {
   position: relative;
   margin: 0 30px;
 }
 
-.help .help-content .help-img .img1 img,
-.help .help-content .help-img .img2 img,
-.help .help-content .help-img .img3 img {
+.help .help-content .help-img .item img {
   width: 100%;
+  transition: 0.4s;
 }
 
-.help .help-content .help-img .img1 img:hover,
-.help .help-content .help-img .img2 img:hover,
-.help .help-content .help-img .img3 img:hover {
-  background-color: #000;
+.help .help-content .help-img img:hover {
+  filter: brightness(.5);
 }
 
-.help .help-content .help-img .img-txt1,
-.help .help-content .help-img .img-txt2,
-.help .help-content .help-img .img-txt3 {
+.help .help-content .help-img .img-txt {
   font-size: 40px;
   color: white;
   position: absolute;
@@ -334,13 +327,16 @@ body {
   left: 50%;
   transform: translate(-50%, -20%);
   transition: all 0.4s;
+  z-index: 10;
 }
 
-.help .help-content .help-img .img-txt1:hover,
-.help .help-content .help-img .img-txt2:hover,
-.help .help-content .help-img .img-txt3:hover {
+.help .help-content .help-img .img-txt:hover {
   color: orange;
   cursor: pointer;
+}
+
+.help .help-content .help-img .img-txt:hover+img {
+  filter: brightness(.5);
 }
 
 .volunteer {
