--- a/BSHomeWork2/all.css
+++ b/BSHomeWork2/all.css
@@ -591,14 +591,40 @@ body {
 
 .awards {
   width: 100%;
+  position: relative;
+  /* max-height: 500px; */
   height: 500px;
   overflow: hidden;
 
 }
 
-.awards img {
+.awards .bg-img img {
   width: 100%;
   margin-top: -350px;
+}
+
+.awards .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  display: flex;
+  font-size: 25px;
+
+}
+
+.awards .container .item {
+  display: flex;
+  flex-direction: column;
+  margin: 0 50px;
+  align-items: center;
+}
+
+.awards .container .item .record {
+  font-size: 50px;
+  font-weight: bold;
+  margin: 15px;
 }
 
 .instagram-txt {
