--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -5,7 +5,10 @@
 
 body {
     font-family: 'PT Sans', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #a5a5a5;
+    line-height: 1.7;
 }
 
 header,
@@ -146,10 +149,53 @@ header .header-navi a:hover {
 }
 
 .shop-onsale .shop-onsale-title a:hover {
-    /* background: transparent; */
     background-position: 0px 0px;
 }
 
 .welcome .container {
     width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+.welcome .container .title h2 {
+    color: #86ae34;
+    font-size: 48px;
+    font-family: 'Pacifico', cursive;
+    font-weight: 400;
+    margin: 50px 0;
+}
+
+.welcome .container .introduction {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 94px;
+}
+
+.welcome .container .introduction .item {
+    width: 33.33%;
+    padding: 0 15px;
+}
+
+.welcome .container .introduction img {
+    margin-bottom: 35px;
+}
+
+.welcome .container .introduction h4 {
+    font-family: 'Pacifico', cursive;
+    font-size: 20px;
+    color: #4f4f4f;
+    font-weight: 400;
+    line-height: 1.45;
+    letter-spacing: 0.02em;
+    margin-bottom: 15px;
+}
+
+.welcome .container .introduction p {
+    color: #8b8b8b;
+}
+
+.img-wall {
+    display: flex;
+    justify-content: center;
 }
