--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -240,13 +240,11 @@ header .header-navi a:hover {
     transform: translate(-50%, -50%);
     z-index: 2;
     transition: 0.35s;
+    visibility: hidden;
 }
 
 .welcome .img-wall .img-overlay:hover>.overlay-line {
     opacity: 1;
     left: 50%;
+    visibility: visible;
 }
-
-/* .welcome .img-wall .overlay-line:hover {
-    border: 1px solid rgba(255, 255, 255, 1);
-} */
