--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -249,3 +249,112 @@ header .header-navi a:hover {
     left: 50%;
     visibility: visible;
 }
+
+.products {
+    margin-top: 69px;
+    margin-bottom: 46px;
+}
+
+.products .container {
+    width: 1200px;
+    margin: auto;
+    text-align: center;
+    font-size: 14px;
+}
+
+.products .title {
+    font-family: Pacifico, handwriting;
+    font-weight: 400;
+    color: #4f4f4f;
+    line-height: 1.344;
+    font-size: 32px;
+    /* margin-top: 69px; */
+}
+
+.products-list-box {
+    display: flex;
+    justify-content: center;
+    padding: 18px 0;
+}
+
+.products-list-box .list {
+    padding: 0 15px;
+    cursor: pointer;
+}
+
+.products-list-box .list:hover {
+    color: #86ae34;
+    font-weight: 900;
+}
+
+.products-wall {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.products-wall .products-item {
+    box-sizing: border-box;
+    max-width: 25%;
+    padding: 0 15px;
+}
+
+.products-wall .products-item a {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.products-wall .products-item a img {
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    border: 1px solid #f0f0f0;
+}
+
+.products-wall .products-item .onsale,
+.products-wall .products-item .featured {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 12px;
+    line-height: 1;
+}
+
+.products-wall .products-item .onsale {
+    padding: 8px 10px;
+    color: #fff;
+    background-color: #ed2835;
+}
+
+.products-wall .products-item .featured {
+    padding: 8px 10px;
+    color: #fff;
+    background-color: #86ae34;
+}
+
+.products-wall .product-content .categories {
+    color: #86ae34;
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 300;
+}
+
+.products-wall .product-content h3 {
+    color: #333333;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.44;
+}
+
+.products-wall .product-content .price {
+    color: #86ae34;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.products-wall .product-content .price strike {
+    color: #a5a5a5;
+    font-size: 14px;
+    font-weight: 900;
+}
