--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: 'PT Sans', sans-serif;
+    font-family: "PT Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
     color: #a5a5a5;
@@ -16,7 +16,8 @@ header .container,
 .shop-onsale,
 .shop-onsale .shop-onsale-bg img,
 .welcome,
-.products {
+.products,
+.shop-now {
     width: 100%;
 }
 
@@ -48,7 +49,7 @@ header .header-member>a {
     text-decoration: none;
     color: #fff;
     border-right: 1px solid #fff;
-    font-size: .75rem;
+    font-size: 0.75rem;
     transition: 0.4s;
 }
 
@@ -63,7 +64,7 @@ header .header-member .cart {
     justify-content: center;
     text-decoration: none;
     color: #fff;
-    font-size: .75rem;
+    font-size: 0.75rem;
 }
 
 header .header-member .cart i {
@@ -76,12 +77,10 @@ header .header-member .cart i:hover {
     color: #c7ed79;
 }
 
-
 header .header-member .cart .count {
     font-size: 1rem;
     padding: 0 10px;
 }
-
 
 header .item2 {
     padding: 15px 0;
@@ -121,22 +120,26 @@ header .header-navi a:hover {
     width: 50%;
 }
 
-.shop-onsale .shop-onsale-title h1 {
+.shop-onsale .shop-onsale-title h1,
+.shop-now .shop-contain h1 {
     font-size: 82px;
+    line-height: 1.2;
 }
 
 .shop-onsale .shop-onsale-title h1 span {
     color: #679509;
 }
 
-.shop-onsale .shop-onsale-title h3 {
+.shop-onsale .shop-onsale-title h3,
+.shop-now .shop-contain h3 {
     font-size: 30px;
-    font-family: 'Pacifico', cursive;
+    font-family: "Pacifico", cursive;
     font-weight: 400;
     margin-bottom: 40px;
 }
 
-.shop-onsale .shop-onsale-title a {
+.shop-onsale .shop-onsale-title a,
+.shop-now .shop-contain a {
     padding: 22px 42px;
     text-decoration: none;
     color: #fff;
@@ -149,7 +152,8 @@ header .header-navi a:hover {
     background-position: -180.233px 0px;
 }
 
-.shop-onsale .shop-onsale-title a:hover {
+.shop-onsale .shop-onsale-title a:hover,
+.shop-now .shop-contain a:hover {
     background-position: 0px 0px;
 }
 
@@ -167,7 +171,7 @@ header .header-navi a:hover {
 .welcome .container .title h2 {
     color: #86ae34;
     font-size: 48px;
-    font-family: 'Pacifico', cursive;
+    font-family: "Pacifico", cursive;
     font-weight: 400;
     margin-bottom: 50px;
 }
@@ -188,7 +192,7 @@ header .header-navi a:hover {
 }
 
 .welcome .container .introduction h4 {
-    font-family: 'Pacifico', cursive;
+    font-family: "Pacifico", cursive;
     font-size: 20px;
     color: #4f4f4f;
     font-weight: 400;
@@ -224,6 +228,7 @@ header .header-navi a:hover {
     background-color: rgba(134, 174, 52, 0);
     transition: 0.35s;
     z-index: 1;
+    overflow: hidden;
 }
 
 .welcome .img-wall .img-overlay:hover {
@@ -241,13 +246,11 @@ header .header-navi a:hover {
     transform: translate(-50%, -50%);
     z-index: 2;
     transition: 0.35s;
-    visibility: hidden;
 }
 
 .welcome .img-wall .img-overlay:hover>.overlay-line {
     opacity: 1;
     left: 50%;
-    visibility: visible;
 }
 
 .products {
@@ -268,7 +271,6 @@ header .header-navi a:hover {
     color: #4f4f4f;
     line-height: 1.344;
     font-size: 32px;
-    /* margin-top: 69px; */
 }
 
 .products-list-box {
@@ -357,4 +359,22 @@ header .header-navi a:hover {
     color: #a5a5a5;
     font-size: 14px;
     font-weight: 900;
+}
+
+.shop-now {
+    background-image: url(img/banners2.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 190px 0px 200px 0px;
+}
+
+.shop-now .container {
+    width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+.shop-now .shop-contain {
+    color: #363636;
 }
