--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -20,7 +20,8 @@ header .container,
 .shop-now,
 .products-type,
 .blog,
-.products-wall-2 {
+.products-wall-2,
+.testimonials {
     width: 100%;
 }
 
@@ -594,4 +595,23 @@ header .header-navi a:hover {
     color: #86ae34;
     font-weight: 900;
     line-height: 1.3;
+}
+
+.testimonials {
+    background-image: url(img/bg5.jpg);
+    padding-top: 186px;
+    padding-bottom: 130px;
+}
+
+.testimonials .container {
+    width: 1200px;
+    margin: auto;
+    text-align: center;
+}
+
+.testimonials-title h3 {
+    color: #fff;
+    font-family: Pacifico, handwriting;
+    font-size: 32px;
+    line-height: 1.344;
 }
