--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -760,3 +760,76 @@ footer .nav4 .far {
     color: #86ae34;
     margin-right: 10px;
 }
+
+.totop {
+    position: fixed;
+    bottom: 80px;
+    right: 20px;
+    text-decoration: none;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: #1e1d24;
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+    line-height: 44px;
+    overflow: hidden;
+    z-index: 100;
+}
+
+.totop::after {
+    background-color: #86ae34;
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+    z-index: -1;
+}
+
+.totop:hover::after {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.popup {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+
+/* .popup-container-img {
+    background-image: url(img/popup.jpg);
+    width: 552px;
+    height: 371px;
+    box-shadow: 0 0 1em #000;
+    display: flex;
+}
+
+.popup-container-img span {
+    justify-items: flex-end;
+}
+
+.popup-container-img div {
+    justify-self: center;
+    align-self: flex-end;
+}
+
+.popup-container-img span:active {
+    display: none;
+    
+} */
