--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -59,13 +59,13 @@ header .header-member>a {
 }
 
 header .header-member>a~a {
-  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
 }
 
 header .header-member .cart {
   display: flex;
   padding: 0 15px;
-  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
   align-items: center;
   justify-content: center;
   text-decoration: none;
