--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -804,38 +804,40 @@ footer .nav4 .far {
 }
 
 /* .popup {
-    display: flex;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 9999;
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  z-index: 9999;
 }
 
 .popup-container-img {
-    background-image: url(img/popup.jpg);
-    width: 552px;
-    height: 371px;
-    box-shadow: 0 0 1em #000;
-    display: flex;
+  background-image: url(img/popup.jpg);
+  width: 552px;
+  height: 371px;
+  box-shadow: 0 0 1em #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.popup-container-img span {
-    justify-items: flex-end;
+.popup-container-img>span {
+  align-self: flex-end;
+  font-size: 30px;
+  text-align: center;
+  color: #000;
+  width: 50px;
+  height: 50px;
+  font-weight: 900;
+  border: 1px solid red;
+  cursor: pointer;
 }
 
 .popup-container-img div {
-    justify-self: center;
-    align-self: flex-end;
-}
-
-.popup-container-img span:active {
-    display: none;
-    
+  color: #000;
 } */
