--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -803,15 +803,15 @@ footer .nav4 .far {
   left: 0;
 }
 
-/* .popup {
-  display: flex;
+.popup {
+  width: 552px;
+  height: 371px;
   position: fixed;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
   z-index: 9999;
 }
 
@@ -834,10 +834,9 @@ footer .nav4 .far {
   width: 50px;
   height: 50px;
   font-weight: 900;
-  border: 1px solid red;
   cursor: pointer;
 }
 
 .popup-container-img div {
   color: #000;
-} */
+}
