--- a/BSHomeWork3/all.css
+++ b/BSHomeWork3/all.css
@@ -27,9 +27,13 @@ footer {
   width: 100%;
 }
 
-header .item1 {
+.header-member-bar {
   background-color: #679509;
   padding: 15px 0;
+}
+
+.container {
+  width: 1200px;
 }
 
 header .sale-bar,
@@ -97,7 +101,7 @@ header .cart-count {
   padding: 1.6px 0 1.6px 10px;
 }
 
-header .item2 {
+.header-logo-bar {
   padding: 15px 0;
 }
 
@@ -122,7 +126,6 @@ header .nav-link:hover {
 }
 
 .shop-onsale .container {
-  width: 1200px;
   margin: auto;
   display: flex;
 }
@@ -219,7 +222,6 @@ header .nav-link:hover {
 }
 
 .welcome .container {
-  width: 1200px;
   margin: auto;
   text-align: center;
 }
@@ -316,7 +318,6 @@ header .nav-link:hover {
 }
 
 .products .container {
-  width: 1200px;
   margin: auto;
   text-align: center;
   font-size: 14px;
@@ -427,7 +428,6 @@ header .nav-link:hover {
 }
 
 .shop-now .container {
-  width: 1200px;
   margin: auto;
   text-align: center;
 }
@@ -437,7 +437,6 @@ header .nav-link:hover {
 }
 
 .products-type .container {
-  width: 1200px;
   margin: auto;
   box-sizing: border-box;
   padding: 143px 0 100px 0;
@@ -482,7 +481,6 @@ header .nav-link:hover {
 }
 
 .blog .container {
-  width: 1200px;
   margin: auto;
   text-align: center;
 }
@@ -579,7 +577,6 @@ header .nav-link:hover {
 }
 
 .products-wall-2 .container {
-  width: 1200px;
   margin: auto;
   display: flex;
 }
@@ -659,7 +656,6 @@ header .nav-link:hover {
 }
 
 .testimonials .container {
-  width: 1200px;
   margin: auto;
   text-align: center;
 }
@@ -694,7 +690,6 @@ header .nav-link:hover {
 }
 
 .subscribe .container {
-  width: 1200px;
   margin: auto;
   text-align: center;
   padding-top: 57px;
@@ -738,7 +733,6 @@ footer {
 }
 
 footer .container {
-  width: 1200px;
   margin: auto;
   display: flex;
   padding-top: 155px;
